# EdgeFleetTelemetry

./: CMakeLists.txt  CMakePresets.json  README.md
apps/: packet_smoke.cpp
include/tele/: packet.hpp
src/: packet.cpp
